tools/ceph_monstore_tool: rebuild initial mgrmap also

Fixes: http://tracker.ceph.com/issues/22266
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit f63d1da4afa3463730ecbc0be29df6375b79fa8f)